<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="augustolucianetti.com.br.notafiscalapplication.FormActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etNumeroEdit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/numero_nota"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etProdutoEdit"
            app:layout_constraintTop_toBottomOf="@+id/etNumeroEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/nome_produto"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etQuanidadeEdit"
            app:layout_constraintTop_toBottomOf="@+id/etProdutoEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/quantidade"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etValorEdit"
            app:layout_constraintTop_toBottomOf="@+id/etQuanidadeEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/valor"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etFornecedorClienteEdit"
            app:layout_constraintTop_toBottomOf="@+id/etValorEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/cnpj_fornecedor_cliente"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/etFornecedorClienteEdit" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/radioGroupEdit">
        <RadioButton
                android:text="@string/entrada"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content" android:id="@+id/rbEntradaEdit" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/saida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbSaidaEdit" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/cadstrar_nf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/button"
            android:id="@+id/btnCadastrarNota" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupEdit"/>
</android.support.constraint.ConstraintLayout>
