<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="augustolucianetti.com.br.notafiscalapplication.MainActivity">

    <Button
            android:text="@string/cadastrar_nota_fiscal"

            android:id="@+id/btnCadastrar"
            style="@style/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.574" app:layout_constraintTop_toBottomOf="@+id/btnListar"/>
    <Button
            android:text="@string/listar_nota_fiscal"
            style="@style/button"
            android:id="@+id/btnListar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNomeUsuario"/>
    <Button
            android:text="@string/sair"
            style="@style/button"
            android:id="@+id/btnSair" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/sobre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSobre"
            style="@style/button"
            app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:layout_width="0dp"
            style="@style/textView"
            android:id="@+id/tvNomeUsuario"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="40dp" android:text="@string/olah"/>
</android.support.constraint.ConstraintLayout>
