<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="120dp"
        android:layout_width="match_parent">


    <TextView
            android:text="@string/nome_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_marginStart="13dp" android:layout_alignParentTop="true" android:id="@+id/textView4"
            android:layout_marginTop="13dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_marginStart="132dp" android:layout_alignTop="@+id/textView4"
            android:id="@+id/tvNomeProduto" android:text="TextView"/>
    <TextView
            android:text="@string/numero_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginStart="0dp" android:layout_marginTop="12dp" android:layout_below="@+id/textView4"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_toEndOf="@+id/textView4"
            android:id="@+id/tvNumeroNota"
            android:layout_marginStart="11dp" android:layout_alignTop="@+id/textView6"/>
    <TextView
            android:text="@string/quantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:id="@+id/textView8"
            android:layout_alignStart="@+id/textView4" android:layout_marginBottom="26dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignTop="@+id/textView8" android:id="@+id/tvQuantidade"
            android:layout_alignStart="@+id/tvNomeProduto"/>
    <TextView
            android:text="Entrada/Saida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:id="@+id/textView10"
            android:layout_alignStart="@+id/textView4"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            android:id="@+id/tvEntradaSaida"
            android:layout_alignStart="@+id/tvNomeProduto"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_edit"
            android:layout_alignParentEnd="true" android:layout_marginEnd="117dp"
            android:layout_alignTop="@+id/textView4" android:id="@+id/ibtnEditar"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_delete"
            android:layout_alignEnd="@+id/ibtnEditar" android:layout_alignParentBottom="true"
            android:id="@+id/ibtnDelete"/>
</RelativeLayout>